# Blockchain_Investigation_Hub

./: .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  Makefile  PROGRESS.md  README.md  THIRD_PARTY_LICENSES.md  arkham_multichain_tron.csv  bih.spec  blockchain_investigation_hub_spec.md  blockchain_investigation_hub_spec_tier2_v2.md  launch.cmd  launch.sh  pyproject.toml  set_key.cmd
.github/workflows/: ci.yml
backend/app/: app_paths.py  config.py  main.py  middleware.py  runtime.py  secrets.py  theme.py  web.py
backend/app/audits/: __init__.py  baselines.py  runner.py
backend/app/connectors/: arkham.py  base.py  bitquery.py  chainalysis.py  defillama.py  esplora.py  etherscan.py  misttrack.py  oklink.py  registry.py
backend/app/db/: __init__.py  connection.py  migrate.py  repository.py  shared_cache.py
backend/app/intel/: graphsense_tagpack.yaml  ofac_sdn.xml
backend/app/migrations/: 0001_provenance_and_container.sql  0002_onchain_facts.sql  0003_sourced_claims.sql  0004_investigator_objects.sql  0005_read_model_views.sql  0006_graphsense_entity_external_id.sql  0007_transfer_cross_source_reconciliation.sql  0008_investigator_labels.sql  0009_investigator_label_targets.sql  (+6 more)
backend/tests/: conftest.py
docs/: BUILD_INDEX.md  algorithms.md  connectors.md  functionality_map.html  overview.md  roadmap.md  schema.md  testing.md
docs/findings/: arkham_export_reconciliation.md  external_facts_confirmation.md  graphsense_tagpack_reconciliation.md  misttrack_reconciliation.md  ofac_sanctions_reconciliation.md  paid_api_integrations.md
docs/phases/: phase_00_scaffolding.md  phase_01_data_model.md  phase_02_evm_connector.md  phase_03_btc_connector_view.md  phase_04_graph_surface.md  phase_05_valuation.md  phase_06_entity_resolution.md  phase_07_import_parsers.md  phase_08_investigator_layer.md  phase_09_reporting.md  phase_10_export_and_readme.md
docs/review/: RELEASE_NOTES_1.2.0.md  RELEASE_NOTES_1.3.0.md  RELEASE_NOTES_1.3.1.md
docs/validation/: bitfinex_2016_case.md  coinjoin_detection_case.md  colonial_pipeline_case.md  genesis_scale_case.md  hydra_garantex_attribution_case.md  lea_fiu_case.md  ronin_lazarus_case.md
examples/Sample_Tornado_Cash/: report.html
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: ActivityPanel.tsx  AddAddress.tsx  App.tsx  CasePicker.tsx  ClusteringPanel.tsx  DenomPanel.tsx  DisagreementsPanel.tsx  FindingsPanel.tsx  GlobalStyle.tsx  Graph.tsx  Legend.tsx  Modal.tsx  Progress.tsx  ReportButton.tsx  SettingsPanel.tsx  SidePanel.tsx  ThemeCustomize.tsx  Toast.tsx  appView.test.ts  appView.ts  cases.test.ts  cases.ts  clustering.test.ts  clustering.ts  exportImage.test.ts  exportImage.ts  ingest.test.ts  ingest.ts  intel.test.ts  intel.ts  jobs.test.ts  jobs.ts  modalFocus.test.ts  modalFocus.ts  nodeValue.test.ts  nodeValue.ts  ordering.test.ts  ordering.ts  provenance.ts  report.test.ts  (+9 more)
installer/: bih.iss
scripts/: app_metadata.py  build_exhibit.py  build_showcase.py  clean.py  dev_run.py  export.py  frozen_smoke.py  installer.py  launch.py  package.py  report.py  retest_cases.py  retest_clustering.py  set_key.py  setup.py  sign.py
(+231 files in other folders)
